# BrechtSerckx.github.io

./: .dir-locals.el  .gitignore  .gitmodules  CNAME  README.md  about.html  brechtserckx-be-hakyll.cabal  brechtserckx-be.cabal  brittany.yaml  default.nix  flake.nix  index.html  overlay.nix  pkgs.nix  professional.html  projects.html  release.nix  resume.html  settings.yaml  shell.nix  site.hs  site.nix  stack.yaml
.github/workflows/: cicd.yml
bak/: site.hs
bak/posts/: 03-test.md  04-recycle.md
css/: default.css  default.scss  resume.css  resume.scss
data/: about.md  default.md  default.yaml  index.md  professional.md  projects.md
data/professional/: 00-compsci.md  01-thesis.md  02-centralapp.md
data/projects/: 01-secret_santa_reflex.md  02-recycle.md
html/: about.page.html  default.template.html  index.page.html  professional.page.html  projects.page.html  resume.page.html
html/resume/: contact.template.html  ee.template.html  interests.template.html  languages.template.html  tech.template.html
js/: default.js
nix/: pkgs.nix  sources.json
posts/: 00-welcome.md  01-about-me.md  02-secret-santa.md
scripts/: cicd.sh
src/Data/Aeson/: Path.hs
src/Hakyll/Web/Pandoc/: Metadata.hs
src/Hakyll/Web/Template/Context/: Path.hs  Yaml.hs
templates/: about.html  default.html  index.html  professional.html  projects.html
