cabal-version:       >=1.10

name:                brechtserckx-be-hakyll
version:             0.1.0.0
author:              Brecht Serckx
maintainer:          services+git@brechtserckx.be
build-type:          Simple

executable brechtserckx-be-hakyll
  main-is:             site.hs
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings
  ghc-options:         -threaded
  build-depends:
      base == 4.*
    , hakyll == 4.13.*
