cabal-version:      >= 1.10

name:               brechtserckx-be
version:            0.1.0.0
author:              Brecht Serckx
maintainer:          services+git@brechtserckx.be
build-type:         Simple

executable brechtserckx-be
  main-is:          site.hs
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
    ApplicativeDo
    BlockArguments
    LambdaCase
    ScopedTypeVariables
  ghc-options:
    -threaded
    -Wall
  build-depends:
      base == 4.*
    , hakyll == 4.13.*
    , filepath >= 1.4
