cabal-version:      >= 1.10

name:               brechtserckx-be
version:            0.1.0.0
author:              Brecht Serckx
maintainer:          services+git@brechtserckx.be
build-type:         Simple

executable brechtserckx-be
  main-is:          site.hs
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
    ApplicativeDo
    BlockArguments
    LambdaCase
    ScopedTypeVariables
  ghc-options:
    -threaded
    -Wall
  build-depends:
      base == 4.*
    , hakyll == 4.13.*
    , filepath >= 1.4
    , aeson >= 1.4
    , unordered-containers >= 0.2
    , vector >= 0.12
    , parsec >= 3.1
    , text >= 1.2
  hs-source-dirs:
    .
    src
  other-modules:
    Data.Aeson.Path
    Hakyll.Web.Template.Context.Path
