cabal-version:      >= 1.10

name:               brechtserckx-be
version:            0.1.0.0
author:              Brecht Serckx
maintainer:          services+git@brechtserckx.be
build-type:         Simple

executable brechtserckx-be
  main-is:          site.hs
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
    ApplicativeDo
    BlockArguments
    LambdaCase
    ScopedTypeVariables
    ViewPatterns
    TypeApplications
  ghc-options:
    -threaded
    -Wall
  build-depends:
      base
    , hakyll
    , filepath
    , aeson
    , unordered-containers
    , vector
    , parsec
    , text
    , pandoc
    , hakyll-sass
    , yaml
    , bytestring
  hs-source-dirs:
    .
    src
  other-modules:
    Data.Aeson.Path
    Hakyll.Web.Template.Context.Path
    Hakyll.Web.Pandoc.Metadata
